se ajustan los titulos de la informacion del producto

--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="../../assets/css/home.css" />
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
+    <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
+    <link rel="stylesheet" href="../../assets/css/home.css">
+  
     
     <link rel="stylesheet" href="../../assets/css/mobile.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
@@ -58,6 +61,7 @@
     <h1>🧸 Muy pronto</h1>
     <p>Estamos preparando una sección con juguetes y diversión para todos.</p>
   </div>
+  <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
 <div class="card-container" id="card-container"></div>
   <script type="module">
     // Cargar el header global
