--- a/src/pages/cart/carrito.html
+++ b/src/pages/cart/carrito.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../../assets/css/footer.css" />
   <link rel="stylesheet" href="../../assets/css/home.css" />
   <link rel="stylesheet" href="../../assets/css/cart.css" />
+  <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
@@ -52,7 +53,7 @@
   </div>
 
   <div class="my-order-content" id="sugerencia"></div>
-
+  <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
   <div class="card-container" id="card-container"></div>
 
  <script type="module" src="../../assets/js/main.js"></script>
