--- a/src/pages/home/hogar.html
+++ b/src/pages/home/hogar.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/hogar.css">
     <link rel="stylesheet" href="../../assets/css/mobile.css">
+    <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
 </head>
@@ -58,7 +59,7 @@
     <p>Próximamente artículos para tu hogar: decoración, cocina, y bienestar.</p>
   </div>
 
- 
+ <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
     <div class="card-container" id="card-container"></div>
   <script type="module">
     // Cargar el header global
