--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../../assets/css/footer.css" />
   <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
   <link rel="stylesheet" href="../../assets/css/carrito.css" />
+ <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
 
 
 </head>
@@ -32,6 +33,7 @@
       </div>
     </aside>
   </div>
+  <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
   <div class="card-container" id="card-container"></div>
 
   <aside class="product-detail" id="product-detail">
@@ -56,6 +58,7 @@
     </div>
 
   </aside>
+  
   <script>
     fetch('../../components/headerglobal.html')
       .then(response => response.text())
