--- a/src/pages/cosmetic/belleza.html
+++ b/src/pages/cosmetic/belleza.html
@@ -7,11 +7,16 @@
 
     <link rel="stylesheet" href="../../assets/css/global.css" />
     <link rel="stylesheet" href="../../assets/css/header.css" />
-    <link rel="stylesheet" href="../../assets/css/home.css" />
+   
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/belleza.css" />
    <link rel="stylesheet" href="../../assets/css/mobile.css">
+   <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
+    <link rel="stylesheet" href="../../assets/css/home.css" />
+    <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
+    
+
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
