--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="../../assets/css/footer.css" />
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/mobile.css">
+    <link rel="stylesheet" href="../../assets/css/belleza.css">
+    <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
 </head>
@@ -50,6 +52,7 @@
         >
       </div>
     </aside>
+    <h2 class="sugerencias-titulo">Algunas sugerencias para ti</h2>
 <div class="card-container" id="card-container"></div>
     <script type="module">
     // Cargar el header global
