se hacen ajustes en el codigo

--- a/src/pages/home/hogar.html
+++ b/src/pages/home/hogar.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../assets/css/hogar.css">
     <link rel="stylesheet" href="../../assets/css/mobile.css">
     <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
+    <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
  
 </head>
