--- a/src/pages/product/detalleprod.html
+++ b/src/pages/product/detalleprod.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
   <link rel="stylesheet" href="../../assets/css/carrito.css" />
  <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
+ <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
 
 
 </head>
