--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../assets/css/carrito.css" />
     <link rel="stylesheet" href="../../assets/css/tituloSugerencias.css">
     <link rel="stylesheet" href="../../assets/css/home.css">
+    <link rel="stylesheet" href="../../assets/css/detalleprod.css" />
   
     
     <link rel="stylesheet" href="../../assets/css/mobile.css">
