--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -57,7 +57,7 @@
 <div class="card-container" id="card-container"></div>
     <script type="module">
     // Cargar el header global
-    fetch('../../components/headerglobal.html')
+    fetch('/Decayba/src/components/headerglobal.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('header').innerHTML = html;
