--- a/src/pages/pets/mascotas.html
+++ b/src/pages/pets/mascotas.html
@@ -64,11 +64,11 @@
       });
 
     // Cargar y activar menú hamburguesa
-     import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
+     import { cargarMenuHamburguesa } from '/Decayba/src/assets/js/modules/menu-loader.js';
   cargarMenuHamburguesa();
   </script>
 
-   <script type="module" src="../../assets/js/main.js"></script>
+   <script type="module" src="/Decayba/src/assets/js/main.js"></script>
 </body>
 </html>
 
