--- a/src/pages/Toys/juguetes.html
+++ b/src/pages/Toys/juguetes.html
@@ -66,17 +66,17 @@
 <div class="card-container" id="card-container"></div>
   <script type="module">
     // Cargar el header global
-    fetch('../../components/headerglobal.html')
+    fetch('/Decayba/src/components/headerglobal.html')
       .then(response => response.text())
       .then(html => {
         document.getElementById('header').innerHTML = html;
       });
 
     // Cargar y activar menú hamburguesa
-     import { cargarMenuHamburguesa } from '../../assets/js/modules/menu-loader.js';
+     import { cargarMenuHamburguesa } from '/Decayba/src/assets/js/modules/menu-loader.js';
   cargarMenuHamburguesa();
   </script>
- <script type="module" src="../../assets/js/main.js"></script>
+ <script type="module" src="/Decayba/src/assets/js/main.js"></script>
   </body>
 </body>
 </html>
